--- a/SSU.Reception/SSU.Reception2/SSU.Reception.csproj
+++ b/SSU.Reception/SSU.Reception2/SSU.Reception.csproj
@@ -444,6 +444,7 @@
     <Content Include="Views\Schools\Delete.cshtml" />
     <Content Include="Views\Schools\Edit.cshtml" />
     <Content Include="Views\Schools\Index.cshtml" />
+    <Content Include="Views\Directions\Rating.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
