Экспорт таблиц в эксель

--- a/SSU.Reception/SSU.Reception2/SSU.Reception.csproj
+++ b/SSU.Reception/SSU.Reception2/SSU.Reception.csproj
@@ -207,6 +207,8 @@
     <Content Include="Scripts\bootstrap-select.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\excel-export.js" />
+    <Content Include="Scripts\FileSaver.js" />
     <Content Include="Scripts\i18n\defaults-am_ET.js" />
     <Content Include="Scripts\i18n\defaults-am_ET.min.js" />
     <Content Include="Scripts\i18n\defaults-ar_AR.js" />
