--- a/SSU.Reception/SSU.Reception2/SSU.Reception.csproj
+++ b/SSU.Reception/SSU.Reception2/SSU.Reception.csproj
@@ -176,7 +176,12 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Helpers\Paging.cs" />
+    <Compile Include="Helpers\AppHelpers.cs" />
+    <Compile Include="Migrations\202004121256320_InitialCreate.cs" />
+    <Compile Include="Migrations\202004121256320_InitialCreate.Designer.cs">
+      <DependentUpon>202004121256320_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Context\DirectionContext.cs" />
     <Compile Include="Models\Context\EnrolleeContext.cs" />
@@ -464,6 +469,11 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202004121256320_InitialCreate.resx">
+      <DependentUpon>202004121256320_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
